--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>
+		Why I want to become a developer
+	</h1>
+	<p>Iam very passionate about technology from my childhood and I want to explore modern technologies. </p>
     <script type="text/javascript" src="./script.js">
 </script>
 
