--- a/main.html
+++ b/main.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-	<h1>
-		Why I want to become a developer
-	</h1>
+	<h1>Why I want to become a developer</h1>
 	<p>Iam very passionate about technology from my childhood and I want to explore modern technologies. </p>
     <script type="text/javascript" src="./script.js">
 </script>
