--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<h1>Why I want to become a developer</h1>
-	<p>Iam very passionate about technology from my childhood and I want to explore modern technologies. </p>
-    <script type="text/javascript" src="./script.js">
+	<p>As a programmer, you are going to work on exciting projects! One of the best parts of being a programmer is creating something that didn't exist before. And then you get control over an application, website, or whatever your creation! You can develop and maintain something very useful, which leads us to the next point…</p>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
